# platform.upstream.libXgesture

./: COPYING  Makefile.am  configure.ac  project.config  xgesture.pc.in
debian/: changelog  control  libxgesture-dev.install  libxgesture0.install  rules
include/X11/extensions/: gesture.h
packaging/: libXgesture.spec  libxgesture.spec
src/: Makefile.am  gesture.c
